--- a/Main/Spottedunicorn/Specificunicorn/specificUnicorn.css
+++ b/Main/Spottedunicorn/Specificunicorn/specificUnicorn.css
@@ -9,9 +9,9 @@
 }
 
 .imageResult {
-    width: 256px;
-    height: 256px;
-    padding: 20px;
+    width: 350px;
+    height: 350px;
+    margin-left: 20px;
 }
 
 .container .container-heading{
@@ -20,16 +20,17 @@
 }
 
 .container .container-heading h3{
-    font-size: 25px;
-    text-decoration: none;
+    font-size: 30px;
+    
 }
 
 .container .container-description{
     margin: 5px;
     padding: 5px 15px;
-    text-decoration: none;
-    font-size: 12px;
-    font-size: 15px;
+}
+
+.container .container-description p{
+    font-size: 20px;
 }
 
 .container .container-image{
@@ -68,20 +69,32 @@
 }
 
 .container .container-box #add-button{
-    margin: 20px 15px;
+    margin: 20px;
+}
+
+.container .container-box #add-button p {
+    font-size: 20px;
 }
 
 .container .container-box #add-button button{
-    margin-top: 20px;
-    padding: 14px 23px;
-    border-radius: 5px;
-    border: 1px solid rgb(38 143 255);
+    padding-top: 6px;
+    width: 130px;
+    height: 90px;
+    text-align:center;
+    font-size: 18px;
+    background: url("/Main/cloud-btn.svg");
+    background-size:contain;
+    background-repeat: no-repeat;
+    background-position: center;
 }
 
 .container .container-box #add-button button:hover{
-    background-color: rgb(38 143 255 / 30%);
-    color: #333333;
-    border: none;
+    -webkit-transform: scale(1.2);
+    transform: scale(1.2);
+}
+
+.container .js-add{
+    margin: 20px;
 }
 
 #wrapper .container .container-images{
