--- a/Main/styles.css
+++ b/Main/styles.css
@@ -38,8 +38,6 @@ h2 {
   color: #f8f5e6;
   font-size: 70px;
   text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;
-  padding-top: 60px;
-  margin: 0 0 0 20px;
 }
 
 h3 {
@@ -137,18 +135,26 @@ h4 {
   box-shadow: 0px 1px 5px #333333;
   background-color: rgba(255,255,255, 0.4);
   width: 990px;
-  height: 350px;
+  height: 360px;
   border-radius: 5px;
+  padding: 20px;
 }
 
 #wrapper > main .välkommen p {
   color: #030303;
-  margin: 10px 0 0 20px;
+  text-align: center;
   font-size: 23px;
 }
 
+#wrapper > main .välkommen h2 {
+  padding-top: 30px;
+  padding-bottom: 10px;
+  text-align: center;
+}
+
 #wrapper > main .välkommen button {
-  margin-left: 435px;
+  margin-top: 10px;
+  margin-left: 415px;
   width: 120px;
   height: 80px;
   text-align:center;
@@ -165,18 +171,22 @@ h4 {
 }
 
 #wrapper > main .unicorn {
-  margin: 5px 0;
+  width: 1000px;
+  margin-top: 10px;
+  
 }
 
 #wrapper > main .unicorn .unicornPost {
+
   background-color: rgba(255,255,255, 0.4);
   width: 480px ;
   height: 400px ;
   border-radius: 5px;
   cursor: pointer;
-  margin: 5px;
+  margin-left: 10px;
+  margin-bottom: 10px;
   float: left;
-  display:inline;
+  display: inline;
   overflow: hidden;
 }
 
