--- a/Main/Spottedunicorn/Spottedunicorn.css
+++ b/Main/Spottedunicorn/Spottedunicorn.css
@@ -1,17 +1,15 @@
 #wrapper main #unicorn-container {
-    margin-top: 10px;
-    width: 1000px;
+    margin: 10px 0;
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(480px, 1fr));
+    gap: 10px;
 }
 
 #wrapper main #unicorn-container .unicorn-container-box {
     background-color: rgba(255,255,255, 0.4);
-    width: 480px ;
     height: 400px ;
-    margin-left: 10px;
-    margin-bottom: 10px;
     border-radius: 5px;
     cursor: pointer;
-    float: left;
     display:inline;
     overflow: hidden;  
 }
@@ -29,7 +27,6 @@
     width: 270px;
     height: 210px;
     border-radius: 5px;
-    display: block;
     float: right;
     box-shadow: 0px 1px 5px rgb(38 143 255);  
 }
@@ -54,8 +51,7 @@
     display: flex;
     align-items: center;
     justify-content: space-between;
-    margin: 0 5px;
-    padding-top: 5px;
+    padding: 5px;
     border-top: 1px solid rgb(38 143 255);
 }
   
@@ -84,7 +80,8 @@
 }
 
 #wrapper > main #load-more {
-    margin-left: 435px;
+    position: relative;
+    left: 44%;
     width: 120px;
     height: 80px;
     text-align:center;
@@ -100,3 +97,41 @@
     -webkit-transform: scale(1.2);
     transform: scale(1.2);
 }
+
+@media screen and (max-width: 1030px ){
+    #wrapper main #unicorn-container{
+        grid-template-columns: repeat(auto-fit, minmax(400px, 1fr));
+    }
+
+    #wrapper main #spotted-unicorn-header h2{
+        font-size: 45px;
+    }
+}
+
+@media screen and (max-width: 430px ){
+
+    #wrapper main #unicorn-container{
+      display: flex;
+      flex-direction: column;
+    }
+    #wrapper main #unicorn-container .unicorn-container-box{
+      display: grid;
+    }
+  
+    #wrapper main #unicorn-container .unicorn-container-box .unicorn-picture {
+      position: relative;
+      width: auto;
+    }
+    #wrapper main #spotted-unicorn-header h2{
+        font-size: 30px;
+    }
+
+    #wrapper main #spotted-unicorn-header p{
+        font-size: 17px;
+    }
+
+    #wrapper > main #load-more{
+        left: 20%;
+    }
+
+  }
