--- a/Main/styles.css
+++ b/Main/styles.css
@@ -104,8 +104,8 @@ h4 {
 .hamburger-menu {
   right: 15px;
   position: absolute;
-  width: 80px;
-  height: 80px;
+  width: 42px;
+  height: 42px;
   cursor: pointer;
   z-index: 999;
   display: none;
@@ -114,8 +114,8 @@ h4 {
 .cross-icon {
   right: 15px;
   position: absolute;
-  width: 80px;
-  height: 80px;
+  width: 42px;
+  height: 42px;
   cursor: pointer;
   z-index: 999;
   display: none;
@@ -132,7 +132,6 @@ h4 {
 #wrapper > main .välkommen {
   box-shadow: 0px 1px 5px #333333;
   background-color: rgba(255,255,255, 0.4);
-  width: 990px;
   height: 360px;
   border-radius: 5px;
   padding: 20px;
@@ -152,7 +151,8 @@ h4 {
 
 #wrapper > main .välkommen button {
   margin-top: 10px;
-  margin-left: 415px;
+  position: relative;
+  left: 50%;
   width: 120px;
   height: 80px;
   text-align:center;
@@ -169,20 +169,18 @@ h4 {
 }
 
 #wrapper > main .unicorn {
-  width: 1000px;
   margin-top: 10px;
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(480px, 1fr));
+  gap: 10px;
+  margin-bottom: 10px;
 }
 
 #wrapper > main .unicorn .unicornPost {
   background-color: rgba(255,255,255, 0.4);
-  width: 480px ;
   height: 400px ;
   border-radius: 5px;
   cursor: pointer;
-  margin-left: 10px;
-  margin-bottom: 10px;
-  float: left;
-  display: inline;
   overflow: hidden;
 }
 
@@ -192,7 +190,6 @@ h4 {
   width: 270px;
   height: 210px;
   border-radius: 5px;
-  display: block;
   float: right;
   box-shadow: 0px 1px 5px rgb(38 143 255);
 }
@@ -257,13 +254,15 @@ h4 {
 
 #wrapper > footer {
   grid-area: footer;
+  width: 100%;
+  margin: auto;
   border-top: 1px solid #333333;
-  padding: 30px 300px;
+  padding: 30px;
+  display: flex;
+  justify-content: center;
 }
 
 #wrapper > footer #container {
-  display: flex;
-  max-width: 1200px;
   margin: auto;
   justify-content: space-between;
 }
@@ -286,6 +285,30 @@ h4 {
   #wrapper header .topnav a{
     font-size: 15px;
   }
+
+  #wrapper main{
+    margin: 65px 10px 10px 10px;
+  }
+
+  #wrapper > main .välkommen {
+    display: flex;
+    flex-direction: column;
+    height: auto;
+  }
+
+  #wrapper > main .välkommen h2{
+    font-size: 25px;
+
+  }
+
+  #wrapper > main .välkommen p{
+    font-size: 20px;
+  }
+
+  #wrapper > main .unicorn{
+    grid-template-columns: repeat(auto-fit, minmax(400px, 1fr));
+  }
+
 }
 
 @media screen and (max-width: 850px ) {
@@ -329,5 +352,22 @@ h4 {
     justify-content: center;
     border-radius: 0;
     color: rgba(95, 21, 242, 1);
+  }
+
+}
+
+@media screen and (max-width: 430px ){
+
+  #wrapper > main .unicorn{
+    display: flex;
+    flex-direction: column;
+  }
+  #wrapper > main .unicorn .unicornPost{
+    display: grid;
+  }
+
+  #wrapper > main .unicorn .unicornPost .unicorn-picture{
+    position: relative;
+    width: auto;
   }
 }
