--- a/Main/styles.css
+++ b/Main/styles.css
@@ -367,6 +367,10 @@ h4 {
     height: 30px;
   }
 
+  #wrapper > main .välkommen button{
+    left: 20%;
+  }
+
   #wrapper > main .unicorn{
     display: flex;
     flex-direction: column;
