--- a/Main/Searchunicorn/Pattern/pattern.css
+++ b/Main/Searchunicorn/Pattern/pattern.css
@@ -38,7 +38,7 @@
 .container .container-image img {
     height: 87%;
     width: 100%;
-    object-fit: cover;
+    object-fit: contain;
 }
 
 .container .container-image .icons {
