--- a/Main/Spottedunicorn/Specificunicorn/specificUnicorn.css
+++ b/Main/Spottedunicorn/Specificunicorn/specificUnicorn.css
@@ -46,7 +46,7 @@
 .container .container-image img {
     height: 87%;
     width: 100%;
-    object-fit: cover;
+    object-fit: contain;
 }
 
 .container .container-image .icons {
