--- a/Main/Searchunicorn/Searchunicorn.css
+++ b/Main/Searchunicorn/Searchunicorn.css
@@ -44,7 +44,7 @@
     height: 80px;
     text-align:center;
     font-size: 18px;
-    background: url("/Main/cloud-btn.svg");
+    background: url("../cloud-btn.svg");
     background-size:contain;
     background-repeat: no-repeat;
     background-position: center;
